<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundPrimary"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

    <TextView android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


        <Button
            android:id="@+id/videoStream"

            android:onClick="videoStream"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btnBackground"
            android:text="@string/btnVideoStream"
            android:textColor="@color/btnTextColor"/>

        <Button
            android:id="@+id/settings"

            android:onClick="settings"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btnBackground"
            android:text="@string/btnSettings"
            android:textColor="@color/btnTextColor"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:id="@+id/textView"
        android:layout_gravity="bottom|center_horizontal" />


</LinearLayout>
